# ditto

./: .dockerignore  .gitignore  DittoConfiguration.xml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
src/ditto/: client.py  config.py  constants.py  credentials.py  database.py  image_processing.py  lifecycle.py  main.py  notion.py  schemas.py  secrets.py  text_rendering.py  verify_db.py  verify_endpoints.py
src/ditto/utilities/: timer.py  wrap_text.py
src/ditto_view/: inky_frame.py  inky_helper.py  main.py
tests/: conftest.py  test_constants.py  test_database.py  test_notion.py  test_schemas.py  test_text_rendering.py
