[project]
name = "ditto"
version = "1.1.2"
description = "Server to render quotes from a Notion database to images."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.127.0",
    "loguru>=0.7.3",
    "notion-client==2.5.0",
    "numpy>=2.4.0",
    "pillow>=12.0.0",
    "requests>=2.32.3",
    "uvicorn>=0.40.0",
    "wand>=0.6.13",
]
